about us layout issue fixed

--- a/public/frontEnd/css/styles.css
+++ b/public/frontEnd/css/styles.css
@@ -1081,7 +1081,7 @@ section {
   .author_date {
     margin-top: 10px;
     display: flex;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     align-items: baseline;
     gap: 5px;
   }
